Cleaning up edn and json tests.